# MELO_workspace

./: figure2.html
.devcontainer/: Dockerfile
src/: ros2.repos
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: HeadingAngle.msg  HelperPosition.msg  Path.msg  State.msg
src/custom_interfaces/srv/: BathyService.srv  ShorelineService.srv
src/environment/: package.xml  setup.py
src/environment/bathy_data/: gebco_2023_n49.9814_s46.8063_w-125.2002_e-121.5601.nc
src/environment/environment/: py_bathy.py  py_envi.py  py_shoreline.py  temp.py
src/environment/shoreline_data/: north_america_shorlines.dbf  north_america_shorlines.shx
src/mammals/: package.xml  setup.cfg  setup.py
src/mammals/mammals/: py_mammal.py
src/path_planning/: Voyage_definition.csv  package.xml  setup.py
src/path_planning/path_planning/: objectives.py  ompl_path.py  py_navigation_system.py  py_path_plan.py
src/ship/: package.xml  setup.cfg  setup.py
src/ship/ship/: py_ship.py
src/tempr/: package.xml  setup.cfg  setup.py
src/visualisation/: package.xml  setup.py
src/visualisation/visualisation/: py_visual.py
